--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <div class="reveal">
     <div class="slides">
       <section>
+        <section data-background-image="images/title.png" data-background-size="contain">
+				</section>
+
         <section>
           <h2 class="r-fit-text">Hi, I am Slava!</h2>
 
